@@ -25,7 +25,8 @@ import io.github.ericmedvet.mrsim2d.core.geometry.Point;
 import io.github.ericmedvet.mrsim2d.core.geometry.Poly;
 import io.github.ericmedvet.mrsim2d.viewer.DrawingUtils;
 import io.github.ericmedvet.mrsim2d.viewer.drawers.AbstractComponentDrawer;
-import java.awt.*;
+import java.awt.Color;
+import java.awt.Graphics2D;
 import java.awt.geom.Line2D;
 import java.awt.geom.Path2D;
 
@@ -57,7 +58,7 @@ public class RigidBodyDrawer extends AbstractComponentDrawer<RigidBody> {
     g.draw(path);
     // plot angle
     Point center = poly.center();
-    Point firstSideMeanPoint = poly.sides().get(0).center();
+    Point firstSideMeanPoint = poly.sides().getFirst().center();
     g.draw(new Line2D.Double(center.x(), center.y(), firstSideMeanPoint.x(), firstSideMeanPoint.y()));
     return true;
   }
